--- a/shapki/index.html
+++ b/shapki/index.html
@@ -108,7 +108,10 @@
             <div class="letter">
                 <li>A
                     <div class="info-container">
-                        123123
+                        <div class="flex align-cent">A<img src="img/brands-1.jpg" alt=""></div>
+                        <div class="flex align-cent">Aртель<img src="img/brands-2.jpg" alt=""></div>
+                        <div class="flex align-cent">Avanta<img src="img/brands-3.png" alt=""></div>
+                        <div class="flex align-cent">Avenue<img src="img/brands-4.png" alt=""></div>
                     </div>
                 </li>
             </div>
@@ -116,147 +119,189 @@
             <div class="letter">
                 <li>B
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>C
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>D
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>E
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>F
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>G
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>H
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>I
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>G
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>K
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>L
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>M
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>N
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>O
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>P
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>R
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>S
                     <div class="info-container">
-                        5555
+                        content
                     </div>
                 </li>
-            </div>
-            <div class="letter">
-                <li>
-                    <Thead></Thead>
-                    <div class="info-container">
-                        5555
-                    </div>
-                </li>
-            </div>
-            <div class="letter">
-                <li>V
-                    <div class="info-container">
-                        5555
-                    </div>
-                </li>
-            </div>
-            <li>W</li>
-            <li>О</li>
-            <li>М</li>
-            <li>И</li>
-            <li>П</li>
-            <li>С</li>
-            <li>Т</li>
-        </ul>
-    </div>
-    <div class="owl-carousel">
+                </div>
+                <div class="letter">T
+                    <li>
+                        <Thead></Thead>
+                        <div class="info-container">
+                            content
+                        </div>
+                    </li>
+                </div>
+                <div class="letter">
+                    <li>V
+                        <div class="info-container">
+                            content
+                        </div>
+                    </li>
+                </div>
+                <div class="letter">
+                    <li>W
+                        <div class="info-container">
+                            content
+                        </div>
+                    </li>
+                </div>
+                <div class="letter">
+                    <li>О
+                        <div class="info-container">
+                            content
+                        </div>
+                    </li>
+                </div>
+                <div class="letter">
+                    <li>М
+                        <div class="info-container">
+                            content
+                        </div>
+                    </li>
+                </div>
+                <div class="letter">
+                    <li>И
+                        <div class="info-container">
+                            content
+                        </div>
+                    </li>
+                </div>
+                <div class="letter">
+                    <li>П
+                        <div class="info-container">
+                            content
+                        </div>
+                    </li>
+                </div>
+                <div class="letter">
+                    <li>С
+                        <div class="info-container">
+                            content
+                        </div>
+                    </li>
+                </div>
+                <div class="letter">
+                    <li>Т
+                        <div class="info-container">
+                            content
+                        </div>
+                    </li>
+                </div>
+                </ul>
+                </div>
+    <div class="owl-carousel owl-theme slide-one">
         <div class="slider-item"><img src="img/main-banner.png" alt=""></div>
         <div class="slider-item"><img src="img/main-banner.png" alt=""></div>
         <div class="slider-item"><img src="img/main-banner.png" alt=""></div>
@@ -265,9 +310,37 @@
 </header>
 
 <body>
-    <div class="main-content content-wrapper flex">
-
+    <section class="gallery">
+        <div class="flex content-wrapper jc-between">
+            <div class="toggle-button green-button">Новинки</div>
+            <div class="toggle-button yellow-button">Хиты</div>
+            <div class="toggle-button red-button">Акции</div>
+        </div>
+        <div class="gallery-container">
+            <div class="content-wrapper slide-two owl-carousel owl-theme">
+                <div class="gallery-item">
+                    <img src="img/2-1.png" width="290" height="235" alt="">
+                    <p>Петрона (52-54) Косынка</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="img/2-2.png" width="290" height="235" alt="">
+                    <p>Петрона (52-54) Косынка</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="img/2-3.png" width="290" height="235" alt="">
+                    <p>Петрона (52-54) Косынка</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="img/2-4.png" width="290" height="235" alt="">
+                    <p>Петрона (52-54) Косынка</p>
+                </div>
+            </div>
+        </div>
+        </section>
+    <div class="content-wrapper flex">
+       
         <section class="about-company ">
+                <section class="sale content-wrapper">123</section>
             <h3 class="sub-title">О компании</h3>
             <p class="about-info">Наша компания с 1996 года занимается продажей головных уборов в Новосибирске и по всей
                 России. Выбирая нас, вы
