--- a/shapki/index.html
+++ b/shapki/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
 </head>
 <header>
-
     <div class="header-top content-wrapper flex">
         <ul class="flex">
             <li><a href="#">О Компании</a></li>
@@ -42,10 +41,12 @@
             <p>Более 50 лучших брендов в одном месте </p>
         </div>
         <div>
-            <img src="" alt="">
-            <p>54 товара на сумму 590 099 Р</p>
-            <img src="" alt="">
-            <p>Избранное 3</p>
+        <div class="cart flex align-cent">
+            <img src="img/icon6.png" width="25" height="25" alt="">
+            <p><span>54</span> товара на<br> сумму 590 099 Р</p>
+            <img src="img/icon5.png" width="25" height="25" alt="">
+            <p>Избранное <span>3</span></p>
+        </div>
             <div class="search-wrapper"><input class="search" type="search" placeholder="Поиск">
                 <button class="search-submit"><svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="5mm"
                         height="5mm" version="1.1"
@@ -83,14 +84,17 @@
         </div>
     </div>
 
-    <ul class="main-nav flex borders">
-        <div class="content-wrapper flex jc-between align-cent">
+    <ul class="main-nav flex borders jc-between align-cent">
+        <div class="start flex align-cent">
+            <div class="flex align-cent first">
             <div class="menubutton">
                 <div class="menuitem"></div>
                 <div class="menuitem"></div>
                 <div class="menuitem"></div>
             </div>
             <li class="first-menu-item"><a href="#">Каталог</a></li>
+        </div>
+        <div class="flex align-cent jc-between" style="width: 55%">
             <li><a href="#">Женщинам</a></li>
             <li><a href="#">Мужчинам</a></li>
             <li><a href="#">Детям</a></li>
@@ -100,8 +104,9 @@
             <li><a href="#">Новинки</a></li>
             <li><a href="#">Хиты</a></li>
             <li><a href="#">Акции</a></li>
+        </div>
+        </div>
     </ul>
-    </div>
     <div class="content-wrapper factory">
         <ul class="flex jc-between align-cent">
             <button class="proizv-button">Производители</button>
@@ -115,7 +120,6 @@
                     </div>
                 </li>
             </div>
-
             <div class="letter">
                 <li>B
                     <div class="info-container">
@@ -300,7 +304,7 @@
                 </li>
             </div>
         </ul>
-    </div>
+    </div>         
     <div class="owl-carousel owl-theme slide-one">
         <div class="slider-item"><img src="img/main-banner.png" alt=""></div>
         <div class="slider-item"><img src="img/main-banner.png" alt=""></div>
@@ -308,8 +312,12 @@
         <div class="slider-item"><img src="img/main-banner.png" alt=""></div>
     </div>
 </header>
-
 <body>
+        <div class="aside-fixed"><p>Преимущества</p>
+        <div class="flex fixed-item"><img src="img/1-1.png" alt=""><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor </span></div>
+        <div class="flex fixed-item"><img src="img/1-2.png" alt=""><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor </span></div>
+        <div class="flex fixed-item"><img src="img/1-3.png" alt=""><spanp>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor </span></div>
+        </div>
     <section class="gallery tabs">
         <div class="flex content-wrapper jc-between tabs_caption">
             <div class="toggle-button green-button active">Новинки</div>
@@ -380,59 +388,166 @@
             <button class="show-all show-all_red">Смотреть все</button>
         </div>
     </section>
-    <div class="content-wrapper flex">
+    <div class="flex jc-center">
         <div class="main-content">
             <section class="seasons">
-                <div class="flex jc-between">
-                    <div class="seasons-button purple">Весна / осень</div>
+                <div class="flex jc-between season-toggle">
+                    <div class="seasons-button purple active">Весна / осень</div>
                     <div class="seasons-button pink">Лето</div>
                     <div class="seasons-button blue">Зима</div>
                 </div>
-                <div class="seasons-content flex jc-between wrap">
+                <div class="purple flex jc-between wrap seasons-content active">
                     <div class="season-item">
                         <a href="#">
-                        <div class="seasons-block">
-                            <div class="square flex align-cent">Головные уборы для взрослых</div>
-                            <img src="img/1.png" alt="">
-                        </div></a>
-                    </div>
-                    <div class="season-item">
-                            <a href="#">
-                        <div class="seasons-block">
-                            <div class="square flex align-cent">Головные уборы для детей</div>
-                            <img src="img/2.png" alt="">
-                        </div></a>
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Головные уборы для взрослых</div>
+                                <img src="img/1.png" alt="">
+                            </div>
+                        </a>
                     </div>
                     <div class="season-item">
                         <a href="#">
-                        <div class="seasons-block">
-                            <div class="square flex align-cent">Шарфы и снуды для взрослых</div>
-                            <img src="img/3.png" alt="">
-                        </div></a>
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Головные уборы для детей</div>
+                                <img src="img/2.png" alt="">
+                            </div>
+                        </a>
                     </div>
                     <div class="season-item">
                         <a href="#">
-                        <div class="seasons-block">
-                            <div class="square flex align-cent">Детские шарфы и снуды</div>
-                            <img src="img/4.png" alt="">
-                        </div></a>
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Шарфы и снуды для взрослых</div>
+                                <img src="img/3.png" alt="">
+                            </div>
+                        </a>
                     </div>
                     <div class="season-item">
                         <a href="#">
-                        <div class="seasons-block">
-                            <div class="square flex align-cent">Комплекты для взрослых</div>
-                            <img src="img/5.png" alt="">
-                        </div></a>
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Детские шарфы и снуды</div>
+                                <img src="img/4.png" alt="">
+                            </div>
+                        </a>
                     </div>
                     <div class="season-item">
                         <a href="#">
-                        <div class="seasons-block">
-                            <div class="square flex align-cent">Детская одежда</div>
-                            <img src="img/6.png" alt="">
-                        </div></a> 
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Комплекты для взрослых</div>
+                                <img src="img/5.png" alt="">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="season-item">
+                        <a href="#">
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Детская одежда</div>
+                                <img src="img/6.png" alt="">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="pink seasons-content flex jc-between wrap">
+                    <div class="season-item">
+                        <a href="#">
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Головные уборы для взрослых1</div>
+                                <img src="img/1.png" alt="">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="season-item">
+                        <a href="#">
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Головные уборы для детей</div>
+                                <img src="img/2.png" alt="">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="season-item">
+                        <a href="#">
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Шарфы и снуды для взрослых</div>
+                                <img src="img/3.png" alt="">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="season-item">
+                        <a href="#">
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Детские шарфы и снуды</div>
+                                <img src="img/4.png" alt="">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="season-item">
+                        <a href="#">
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Комплекты для взрослых</div>
+                                <img src="img/5.png" alt="">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="season-item">
+                        <a href="#">
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Детская одежда</div>
+                                <img src="img/6.png" alt="">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="blue seasons-content flex jc-between wrap">
+                    <div class="season-item">
+                        <a href="#">
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Головные уборы для взрослых2</div>
+                                <img src="img/1.png" alt="">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="season-item">
+                        <a href="#">
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Головные уборы для детей</div>
+                                <img src="img/2.png" alt="">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="season-item">
+                        <a href="#">
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Шарфы и снуды для взрослых</div>
+                                <img src="img/3.png" alt="">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="season-item">
+                        <a href="#">
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Детские шарфы и снуды</div>
+                                <img src="img/4.png" alt="">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="season-item">
+                        <a href="#">
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Комплекты для взрослых</div>
+                                <img src="img/5.png" alt="">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="season-item">
+                        <a href="#">
+                            <div class="seasons-block">
+                                <div class="square flex align-cent">Детская одежда</div>
+                                <img src="img/6.png" alt="">
+                            </div>
+                        </a>
                     </div>
                 </div>
             </section>
+            <section class="sale">Распродажа <span>-70%</span></section>
             <section class="about-company">
                 <h3 class="sub-title">О компании</h3>
                 <p class="about-info">Наша компания с 1996 года занимается продажей головных уборов в Новосибирске и по
@@ -605,25 +720,25 @@
     <div class="borders">
         <div class="content-wrapper flex jc-between">
             <img class="logo-footer" src="img/logo-shap.png" height="100" widht="95" alt="">
-            <div class="socials flex">
+            <div class="socials jc-between flex align-cent">
                 <p>Мы в соц. сетях</p>
-                <a href="#"><img src="img/vk.png" alt=""></a>
+                <a href="#"><img src="img/ok.png" alt=""></a>
                 <a href="#"><img src="/img/vk.png" alt=""></a>
             </div>
         </div>
     </div>
     <div class="footer-content flex wrap content-wrapper">
-        <div style="border-right: 2px solid #b8b8b8" class="footer-item">
+        <div class="footer-item">
             <p>Карта сайта</p>
-            <div class="flex wrap">
-                <div style="margin-right: 100px;">
+            <div class="flex wrap jc-between">
+                <div>
                     <a href="#">О компании</a>
                     <a href="#">Новости</a>
                     <a href="#">Доставка</a>
                     <a href="#">Гарантии</a>
                     <a href="#">Контакты</a>
                 </div>
-                <div style="margin-right: 105px;">
+                <div>
                     <a href="#">Правила работы</a>
                     <a href="#">Часто задаваемые вопросы</a>
                     <a href="#">Таблица размеров</a>
@@ -631,7 +746,7 @@
                 </div>
             </div>
         </div>
-        <div style="margin-left: 55px; margin-right: 65px; border-right: 2px solid #b8b8b8" class="footer-item">
+        <div class="footer-item">
             <p>Личный кабинет</p>
             <a href="#">Личный кабинет</a>
             <a href="#">Заметки</a>
