--- a/shapki/index.html
+++ b/shapki/index.html
@@ -723,7 +723,7 @@
             <div class="socials jc-between flex align-cent">
                 <p>Мы в соц. сетях</p>
                 <a href="#"><img src="img/ok.png" alt=""></a>
-                <a href="#"><img src="/img/vk.png" alt=""></a>
+                <a href="#"><img src="img/vk.png" alt=""></a>
             </div>
         </div>
     </div>
