--- a/chisto5/index.html
+++ b/chisto5/index.html
@@ -19,181 +19,205 @@
 </header>
 
 <body>
-<section class="working">
-    <div class="section-header bg-color-orange">
-        <h3 class="content-wrapper">Как мы работаем</h3>
-    </div>
-    <div class="content-wrapper flex">
-    <div class="work-item">
-        <img src="/img/icon1.png" alt="">
-        <p>Прозрачное ценообразование!</p>
-        <span>Почасовая оплата от 550 рублей (минимальное время - 2 часа). Вы платите за реальную работу в четко обозначенное время.Никаких скрытых платежей и плавающих цен за разовые процедуры.   </span>
-    </div>
-    <div class="work-skew bg-work-1">
-    <div class="work-item work-normal">
-        <img src="/img/icon2.png" alt="">
-        <p>Выбираете вы!</p>
-        <span>Вы сами решаете, что нужно чистить: окна, мебель и санузел или только бытовую технику. Навести порядок в одной комнате или заплатить за комплексную уборку всего дома. Только вы определяете, какое время оплачивать.  </span>
-    </div>
-</div>
-<div class="work-skew bg-work-2">
-    <div class="work-item work-normal ">
-        <img src="/img/icon3.png" alt="">
-        <p>Двойной контроль</p>
-        <span>Вы контролируете свои расходы, мы - работу бригады. Гарантия качества уборки и отсутствия переплат – контроль и учет!  </span>
-    </div>
-</div>
-    <div class="work-item">
-        <img src="/img/icon4.png" alt="">
-        <p>Поможем всем</p>
-        <span>Работаем с самыми разными объектами. Офисы, квартиры, коттеджи. Повседневная и генеральная уборка. Клининговые услуги в помещениях после ремонта.  </span>
-    </div>
-</div>
-</section>
-<section>
-    <div class="section-header bg-color-green">
-        <h3 class="content-wrapper">Наши преимущества</h3>
-    </div>
-    <div class="content-wrapper advantage-wrapper flex wrap jc-between">
-        <div class="advantage-item flex align-cent">
-            <img src="img/icon1_1.png" alt="">
-            <div>
-            <p>Гибкое</p>
-            <span>ценообразование</span>
+    <section class="working">
+        <div class="section-header bg-color-orange">
+            <h3 class="content-wrapper">Как мы работаем</h3>
         </div>
-        </div>
-        <div class="advantage-item flex align-cent">
-            <img src="img/icon1_2.png" alt="">
-            <div>
-            <p>Профессиональная </p>
-            <span>команда</span>
+        <div class="content-wrapper flex">
+            <div class="work-item">
+                <img src="/img/icon1.png" alt="">
+                <p>Прозрачное ценообразование!</p>
+                <span>Почасовая оплата от 550 рублей (минимальное время - 2 часа). Вы платите за реальную работу в четко
+                    обозначенное время.Никаких скрытых платежей и плавающих цен за разовые процедуры. </span>
+            </div>
+            <div class="work-skew bg-work-1">
+                <div class="work-item work-normal">
+                    <img src="/img/icon2.png" alt="">
+                    <p>Выбираете вы!</p>
+                    <span>Вы сами решаете, что нужно чистить: окна, мебель и санузел или только бытовую технику. Навести
+                        порядок в одной комнате или заплатить за комплексную уборку всего дома. Только вы определяете,
+                        какое время оплачивать. </span>
+                </div>
+            </div>
+            <div class="work-skew bg-work-2">
+                <div class="work-item work-normal ">
+                    <img src="/img/icon3.png" alt="">
+                    <p>Двойной контроль</p>
+                    <span>Вы контролируете свои расходы, мы - работу бригады. Гарантия качества уборки и отсутствия
+                        переплат – контроль и учет! </span>
+                </div>
+            </div>
+            <div class="work-item">
+                <img src="/img/icon4.png" alt="">
+                <p>Поможем всем</p>
+                <span>Работаем с самыми разными объектами. Офисы, квартиры, коттеджи. Повседневная и генеральная уборка.
+                    Клининговые услуги в помещениях после ремонта. </span>
             </div>
         </div>
-        <div class="advantage-item flex align-cent">
-            <img src="img/icon1_3.png" alt="">
+    </section>
+    <section>
+        <div class="section-header bg-color-green">
+            <h3 class="content-wrapper">Наши преимущества</h3>
+        </div>
+        <div class="content-wrapper advantage-wrapper flex wrap jc-between">
+            <div class="advantage-item flex align-cent">
+                <img src="img/icon1_1.png" alt="">
+                <div>
+                    <p>Гибкое</p>
+                    <span>ценообразование</span>
+                </div>
+            </div>
+            <div class="advantage-item flex align-cent">
+                <img src="img/icon1_2.png" alt="">
+                <div>
+                    <p>Профессиональная </p>
+                    <span>команда</span>
+                </div>
+            </div>
+            <div class="advantage-item flex align-cent">
+                <img src="img/icon1_3.png" alt="">
+                <div>
+                    <p>Независимый</p>
+                    <span>постоянный<br>контроль качества</span>
+                </div>
+            </div>
+            <div class="advantage-item flex align-cent">
+                <img src="img/icon1_4.png" alt="">
+                <div>
+                    <p>Система скидок</p>
+                    <span>для постоянных клиентов</span>
+                </div>
+            </div>
+            <div class="advantage-item flex align-cent">
+                <img src="img/icon1_5.png" alt="">
+                <div>
+                    <p>Эксклюзивная методика,</p>
+                    <span> позволяющая сократить время уборки квартиры на 35%»</span>
+                </div>
+            </div>
+            <div class="advantage-item flex align-cent">
+                <img src="img/icon1_6.png" alt="">
+                <p>Юридическая<br> ответственность</p>
+                <span></span>
+            </div>
+        </div>
+    </section>
+    <section class="cleaning">
+        <div class="section-header bg-color-orange">
+            <h3 class="content-wrapper">Где планируете делать уборку</h3>
+        </div>
+        <div class="content-wrapper">
             <div>
-            <p>Независимый</p>
-            <span>постоянный<br>контроль качества</span>
+                <form class="flex wrap jc-between" action="#">
+                    <p>
+                        <input type="checkbox" id="test1" />
+                        <label for="test1">Уборка в квартире</label>
+                    </p>
+                    <p>
+                        <input type="checkbox" id="test2" checked="checked" />
+                        <label for="test2">Генеральная уборка</label>
+                    </p>
+                    <p>
+                        <input type="checkbox" id="test3" />
+                        <label for="test3">Уборка офисных помещений</label>
+                    </p>
+                    <p>
+                        <input type="checkbox" id="test3" />
+                        <label for="test3">Уборка после ремонта</label>
+                    </p>
+                </form>
+            </div>
+            <button class="price">Узнать стоимость</button>
         </div>
+    </section>
+    <section class="prices">
+        <div class="section-header bg-color-green">
+            <h3 class="content-wrapper">Наши цены</h3>
         </div>
-        <div class="advantage-item flex align-cent">
-            <img src="img/icon1_4.png" alt="">
-            <div>
-            <p>Система скидок</p>
-            <span>для постоянных клиентов</span>
-        </div>
-        </div>
-        <div class="advantage-item flex align-cent">
-            <img src="img/icon1_5.png" alt="">
-            <div>
-            <p>Эксклюзивная методика,</p>
-            <span> позволяющая сократить время уборки квартиры на 35%»</span>
-        </div>
-        </div>
-        <div class="advantage-item flex align-cent">
-            <img src="img/icon1_6.png" alt="">
-            <p>Юридическая<br> ответственность</p>
-            <span></span>
-        </div>
-    </div>
-</section>
-<section class="cleaning">
-    <div class="section-header bg-color-orange">
-        <h3 class="content-wrapper">Где планируете делать уборку</h3>
-    </div>
-    <div class="content-wrapper">
-        <div>
-        <form action="#">
-            <p>
-              <input type="checkbox" id="test1" />
-              <label for="test1">Уборка в квартире</label>
-            </p>
-            <p>
-              <input type="checkbox" id="test2" checked="checked" />
-              <label for="test2">Генеральная уборка</label>
-            </p>
-            <p>
-              <input type="checkbox" id="test3" />
-              <label for="test3">Уборка офисных помещений</label>
-            </p>
-            <p>
-                <input type="checkbox" id="test3"  />
-                <label for="test3">Уборка после ремонта</label>
-              </p>
-        </form>
-        </div>
-    <button class="price">Узнать стоимость</button>
-</div>
-</section>
-<section class="prices">
-    <div class="section-header bg-color-green">
-        <h3 class="content-wrapper">Наши цены</h3>
-    </div>
         <div class="content-wrapper flex">
             <div>
-            <div class="scew-block">
-                <div class="normal-text"> 
-                    <p>от 550 <span>рублей в час**</span></p>
+                <div class="scew-block">
+                    <div class="normal-text">
+                        <p>от 550 <span>рублей в час**</span></p>
+                    </div>
+
                 </div>
-                
+                <p class="prices-info">Подробности узнавайте у наших операторов</p>
+                <button class="order">Заказать</button>
             </div>
-            <p class="prices-info">Подробности узнавайте у наших операторов</p>
-            <button class="order">Заказать</button>
-        </div>
             <img src="img/pig.png" width="574" height="431" alt="">
         </div>
-
-
-</section>
-<section class="discont">
-    <div class="section-header bg-color-orange">
-        <h3 class="content-wrapper">Скидки</h3>
-    </div>
-
-</section>
-<section>
-    <div class="section-header bg-color-forrest">
-        <h3 class="content-wrapper">Отзывы</h3>
-    </div>
-
-</section>
-<section class="forms">
-    <div class="content-wrapper flex wrap jc-between">
-        <div class="forms-info">
-        <p>Позвоните нам сейчас.<br>Порадуйте себя и своих близких!</p>
-        <p class="flex align-cent">СКИДКА <span>50<span>%</span></span></p>
-        <p>на первую уборку*</p>
+    </section>
+    <section class="discounts">
+        <div class="section-header bg-color-orange">
+            <h3 class="content-wrapper">Скидки</h3>
         </div>
-        <div class="inputs">
-            <input type="text" placeholder="Имя">
-            <input type="phone" placeholder="+7 (___) ___ __ __">
-            <input type="email" placeholder="Email">
-            <button>Задать вопрос</button>
+        <div class="content-wrapper flex">
+            <div class="discounts-item">
+                <p>5% <span>скидка</span></p>
+                <div class="status silver">Серебрянный статус</div>
+                <p class="discounts-info">Для клиентов, которые в <span>течение месяца заказывают уборку более 1
+                        раза.***</span></p>
+            </div>
+            <div class="work-skew working">
+                <div class="discounts-item work-normal">
+                    <p>10% <span>скидка</span></p>
+                    <div class="status golden">Золотой статус</div>
+                    <p class="discounts-info">Для клиентов, которые в течение<span>3-х месяцев ежемесячно заказывают
+                            более 1
+                            уборки.***</span></p>
+                </div>
+            </div>
+            <div class="discounts-item">
+                <p>20% <span>скидка</span></p>
+                <p class="discounts-info">На день рождения</p>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+    <section>
+        <div class="section-header bg-color-forrest">
+            <h3 class="content-wrapper">Отзывы</h3>
+        </div>
+
+    </section>
+    <section class="forms">
+        <div class="content-wrapper flex wrap jc-between">
+            <div class="forms-info">
+                <p>Позвоните нам сейчас.<br>Порадуйте себя и своих близких!</p>
+                <p class="flex align-cent">СКИДКА <span>50<span>%</span></span></p>
+                <p>на первую уборку*</p>
+            </div>
+            <div class="inputs">
+                <input type="text" placeholder="Имя">
+                <input type="phone" placeholder="+7 (___) ___ __ __">
+                <input type="email" placeholder="Email">
+                <button>Задать вопрос</button>
+            </div>
+        </div>
+    </section>
 </body>
 <footer>
- <div class="content-wrapper flex">
-    <img class="footer-logo" src="img/logo.png" width="215" height="100" alt="">
-     <div class="footer-item">
-        <div class="phone flex align-cent">
-        <img src="img/phone.png" width="37" height="37" alt="">
-        <a href="tel:89130000000"> 8 913 <span>000 00 00</span></a>
-        </div>
-        <p><span>Адрес:</span> Красный проспект 29, офис 58</p>
-        <p><span>Email:</span><a href="chisto5@gmail.com">chisto5@gmail.com</a></p>
-     </div>
-     <div class="footer-item">
-            <div class="phone flex align-cent">    
-        <img src="img/phone-w.png" width="37" height="37" alt="">
-            <a href="tel:83830000000"> 8 383 <span>000 00 00<span></a>
+    <div class="content-wrapper flex">
+        <img class="footer-logo" src="img/logo.png" width="215" height="100" alt="">
+        <div class="footer-item">
+            <div class="phone flex align-cent">
+                <img src="img/phone.png" width="37" height="37" alt="">
+                <a href="tel:89130000000"> 8 913 <span>000 00 00</span></a>
             </div>
-            <p>* Скидка 50% предоставляется новым клиентам. Общий размер дисконта <br>не превышает 2000 руб. За подробностями обращайтесь к нашим операторам.<br>
-                    ** Не является публичной офертой, подробности узнавайте у оператора.<br>
-                    *** Скидки не суммируются. </p>
-     </div>
- </div>
+            <p><span>Адрес:</span> Красный проспект 29, офис 58</p>
+            <p><span>Email:</span><a href="chisto5@gmail.com">chisto5@gmail.com</a></p>
+        </div>
+        <div class="footer-item">
+            <div class="phone flex align-cent">
+                <img src="img/phone-w.png" width="37" height="37" alt="">
+                <a href="tel:83830000000"> 8 383 <span>000 00 00<span></a>
+            </div>
+            <p>* Скидка 50% предоставляется новым клиентам. Общий размер дисконта <br>не превышает 2000 руб. За
+                подробностями обращайтесь к нашим операторам.<br>
+                ** Не является публичной офертой, подробности узнавайте у оператора.<br>
+                *** Скидки не суммируются. </p>
+        </div>
+    </div>
 </footer>
 <script src="js/jq-min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
