--- a/chisto5/index.html
+++ b/chisto5/index.html
@@ -27,7 +27,7 @@
             </div>
        
         <button class="header-button">Задать вопрос</button>
-        <div class="flex burger jc-center align-cent">
+        <div id="menu-open" class="flex burger jc-center align-cent">
             <div class="burger-item"></div>
             <div class="burger-item"></div>
             <div class="burger-item"></div>
@@ -139,8 +139,8 @@
                         <label for="test3">Уборка офисных помещений</label>
                     </p>
                     <p>
-                        <input type="checkbox" id="test3" />
-                        <label for="test3">Уборка после ремонта</label>
+                        <input type="checkbox" id="test4" />
+                        <label for="test4">Уборка после ремонта</label>
                     </p>
                 </form>
             </div>
@@ -250,19 +250,19 @@
 </div>
 <div class="content-wrapper">
 <div class="aside-menu">
-        <div class="flex burger jc-center align-cent">
+        <div id="menu-close" class="flex burger jc-center align-cent">
                 <div class="burger-item"></div>
                 <div class="burger-item"></div>
                 <div class="burger-item"></div>
             </div>
             <ul>
-                <li><a href="#">Как мы работаем</a></li>
-                <li><a href="#">Наши преимущества</a></li>
-                <li><a href="#">Где планируете делать уборку</a></li>
-                <li><a href="#">Наши цены</a></li>
-                <li><a href="#">Скидки</a></li>
-                <li><a href="#">Отзывы</a></li>
-                <li><a href="#">Оставить заявку</a></li>
+                    <a href="#"><li>Как мы работаем</li></a>
+                    <a href="#"><li>Наши преимущества</li></a>
+                    <a href="#"><li>Где планируете делать уборку</li></a>
+                    <a href="#"><li>Наши цены</li></a>
+                    <a href="#"><li>Скидки</li></a>
+                    <a href="#"><li>Отзывы</li></a>
+                    <a href="#"><li>Оставить заявку</li></a>
             </ul>
 </div>
 </div>
