--- a/chisto5/index.html
+++ b/chisto5/index.html
@@ -173,14 +173,14 @@
             <div class="discounts-item">
                 <p>5% <span>скидка</span></p>
                 <div class="status silver">Серебрянный статус</div>
-                <p class="discounts-info">Для клиентов, которые в <span>течение месяца заказывают уборку более 1
+                <p class="discounts-info">Для клиентов, которые в&nbsp;<span>течение месяца заказывают уборку более 1
                         раза.***</span></p>
             </div>
             <div class="work-skew working">
                 <div class="discounts-item work-normal">
-                    <p>10% <span>скидка</span></p>
+                    <p>10%<span>скидка</span></p>
                     <div class="status golden">Золотой статус</div>
-                    <p class="discounts-info">Для клиентов, которые в течение<span>3-х месяцев ежемесячно заказывают
+                    <p class="discounts-info">Для клиентов, которые в течение&nbsp;<span>3-х месяцев ежемесячно заказывают
                             более 1
                             уборки.***</span></p>
                 </div>
@@ -191,11 +191,23 @@
             </div>
         </div>
     </section>
-    <section>
+    <section class="feedback">
         <div class="section-header bg-color-forrest">
             <h3 class="content-wrapper">Отзывы</h3>
         </div>
-
+        <div class="content-wrapper flex">
+            <div class="feedback-text">
+                <p class="feedback-name"></p>
+                <p class="feedback-parameters"></p>
+                <p class="feedback-parameters"></p>
+                <p></p>
+            </div>
+            <img src="../img/cleaning-girl.png" alt="">
+            <div class="video-feedback">
+                <p>Видеоотзыв</p>
+                <iframe width="495" height="295" src="https://www.youtube.com/embed/_gMKG6oqJ90" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
     </section>
     <section class="forms">
         <div class="content-wrapper flex wrap jc-between">
